Fixed run button's z-index.

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ html, body {
   position: absolute;
   top: 10px;
   right: 10px;
-  z-index: 1;
+  z-index: 5;
 }
 
 #editor-run:hover {
